// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render component 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="gf-form-inline"
      >
        <div
          class="gf-form"
        >
          <label
            class="query-keyword gf-form-label width-6"
          >
            Functions
            <div
              class="css-wf08df-Icon"
              tabindex="0"
            >
              <svg
                data-testid="info-circle"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              />
            </div>
          </label>
        </div>
        <div
          class="gf-form"
        />
        <div
          class="gf-form"
        >
          <button
            class="css-z53gi5-button"
            type="button"
          >
            <div
              class="css-wf08df-Icon"
            >
              <svg
                data-testid="plus"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              />
            </div>
            <span
              class="css-1mhnkuh"
            >
              Add
              <div
                class="css-wf08df-Icon"
              >
                <svg
                  data-testid="angle-down"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </div>
            </span>
          </button>
        </div>
        <div
          class="gf-form gf-form--grow"
        >
          <div
            class="gf-form-label gf-form-label--grow"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="gf-form-inline"
    >
      <div
        class="gf-form"
      >
        <label
          class="query-keyword gf-form-label width-6"
        >
          Functions
          <div
            class="css-wf08df-Icon"
            tabindex="0"
          >
            <svg
              data-testid="info-circle"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
        </label>
      </div>
      <div
        class="gf-form"
      />
      <div
        class="gf-form"
      >
        <button
          class="css-z53gi5-button"
          type="button"
        >
          <div
            class="css-wf08df-Icon"
          >
            <svg
              data-testid="plus"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
          <span
            class="css-1mhnkuh"
          >
            Add
            <div
              class="css-wf08df-Icon"
            >
              <svg
                data-testid="angle-down"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              />
            </div>
          </span>
        </button>
      </div>
      <div
        class="gf-form gf-form--grow"
      >
        <div
          class="gf-form-label gf-form-label--grow"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Render should render with functions 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="gf-form-inline"
      >
        <div
          class="gf-form"
        >
          <label
            class="query-keyword gf-form-label width-6"
          >
            Functions
            <div
              class="css-wf08df-Icon"
              tabindex="0"
            >
              <svg
                data-testid="info-circle"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              />
            </div>
          </label>
        </div>
        <div
          class="gf-form"
        >
          <span
            class="gf-form-label query-part"
          >
            <span
              style="cursor: pointer;"
              tabindex="0"
            >
              top
            </span>
            <span>
              (
            </span>
            
            <div>
              <div
                class="aa-func-param"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="react-autowhatever-1"
                  class="react-autosuggest__container"
                  role="combobox"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="react-autowhatever-1"
                    autocomplete="off"
                    class="tight-form-func-param"
                    placeholder="number"
                    spellcheck="false"
                    style="width: 1ch; font-family: Consolas, "Courier New", Courier, Monaco, monospace;"
                    type="text"
                    value="5"
                  />
                  <div
                    class="react-autosuggest__suggestions-container"
                    id="react-autowhatever-1"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
            <span
              class="comma"
            >
              , 
            </span>
            <div>
              <div
                class="aa-func-param"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="react-autowhatever-1"
                  class="react-autosuggest__container"
                  role="combobox"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="react-autowhatever-1"
                    autocomplete="off"
                    class="tight-form-func-param"
                    placeholder="value"
                    spellcheck="false"
                    style="width: 3ch; font-family: Consolas, "Courier New", Courier, Monaco, monospace;"
                    type="text"
                    value="avg"
                  />
                  <div
                    class="react-autosuggest__suggestions-container"
                    id="react-autowhatever-1"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
            <span>
              )
            </span>
          </span>
          <span
            class="gf-form-label query-part"
          >
            <span
              style="cursor: pointer;"
              tabindex="0"
            >
              scale
            </span>
            <span>
              (
            </span>
            
            <div>
              <div
                class="aa-func-param"
              >
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-owns="react-autowhatever-1"
                  class="react-autosuggest__container"
                  role="combobox"
                >
                  <input
                    aria-autocomplete="list"
                    aria-controls="react-autowhatever-1"
                    autocomplete="off"
                    class="tight-form-func-param"
                    placeholder="factor"
                    spellcheck="false"
                    style="width: 5ch; font-family: Consolas, "Courier New", Courier, Monaco, monospace;"
                    type="text"
                    value="0.001"
                  />
                  <div
                    class="react-autosuggest__suggestions-container"
                    id="react-autowhatever-1"
                    role="listbox"
                  />
                </div>
              </div>
            </div>
            <span>
              )
            </span>
          </span>
        </div>
        <div
          class="gf-form"
        >
          <button
            class="css-z53gi5-button"
            type="button"
          >
            <div
              class="css-wf08df-Icon"
            >
              <svg
                data-testid="plus"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              />
            </div>
            <span
              class="css-1mhnkuh"
            >
              Add
              <div
                class="css-wf08df-Icon"
              >
                <svg
                  data-testid="angle-down"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                />
              </div>
            </span>
          </button>
        </div>
        <div
          class="gf-form gf-form--grow"
        >
          <div
            class="gf-form-label gf-form-label--grow"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="gf-form-inline"
    >
      <div
        class="gf-form"
      >
        <label
          class="query-keyword gf-form-label width-6"
        >
          Functions
          <div
            class="css-wf08df-Icon"
            tabindex="0"
          >
            <svg
              data-testid="info-circle"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
        </label>
      </div>
      <div
        class="gf-form"
      >
        <span
          class="gf-form-label query-part"
        >
          <span
            style="cursor: pointer;"
            tabindex="0"
          >
            top
          </span>
          <span>
            (
          </span>
          
          <div>
            <div
              class="aa-func-param"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="react-autowhatever-1"
                class="react-autosuggest__container"
                role="combobox"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="react-autowhatever-1"
                  autocomplete="off"
                  class="tight-form-func-param"
                  placeholder="number"
                  spellcheck="false"
                  style="width: 1ch; font-family: Consolas, "Courier New", Courier, Monaco, monospace;"
                  type="text"
                  value="5"
                />
                <div
                  class="react-autosuggest__suggestions-container"
                  id="react-autowhatever-1"
                  role="listbox"
                />
              </div>
            </div>
          </div>
          <span
            class="comma"
          >
            , 
          </span>
          <div>
            <div
              class="aa-func-param"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="react-autowhatever-1"
                class="react-autosuggest__container"
                role="combobox"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="react-autowhatever-1"
                  autocomplete="off"
                  class="tight-form-func-param"
                  placeholder="value"
                  spellcheck="false"
                  style="width: 3ch; font-family: Consolas, "Courier New", Courier, Monaco, monospace;"
                  type="text"
                  value="avg"
                />
                <div
                  class="react-autosuggest__suggestions-container"
                  id="react-autowhatever-1"
                  role="listbox"
                />
              </div>
            </div>
          </div>
          <span>
            )
          </span>
        </span>
        <span
          class="gf-form-label query-part"
        >
          <span
            style="cursor: pointer;"
            tabindex="0"
          >
            scale
          </span>
          <span>
            (
          </span>
          
          <div>
            <div
              class="aa-func-param"
            >
              <div
                aria-expanded="false"
                aria-haspopup="listbox"
                aria-owns="react-autowhatever-1"
                class="react-autosuggest__container"
                role="combobox"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="react-autowhatever-1"
                  autocomplete="off"
                  class="tight-form-func-param"
                  placeholder="factor"
                  spellcheck="false"
                  style="width: 5ch; font-family: Consolas, "Courier New", Courier, Monaco, monospace;"
                  type="text"
                  value="0.001"
                />
                <div
                  class="react-autosuggest__suggestions-container"
                  id="react-autowhatever-1"
                  role="listbox"
                />
              </div>
            </div>
          </div>
          <span>
            )
          </span>
        </span>
      </div>
      <div
        class="gf-form"
      >
        <button
          class="css-z53gi5-button"
          type="button"
        >
          <div
            class="css-wf08df-Icon"
          >
            <svg
              data-testid="plus"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
          <span
            class="css-1mhnkuh"
          >
            Add
            <div
              class="css-wf08df-Icon"
            >
              <svg
                data-testid="angle-down"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              />
            </div>
          </span>
        </button>
      </div>
      <div
        class="gf-form gf-form--grow"
      >
        <div
          class="gf-form-label gf-form-label--grow"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
